@@ -2,39 +2,33 @@
 
 package net.yura.domination.ui.swinggui;
 
-
 import java.awt.BorderLayout;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import javax.swing.JButton;
 import javax.swing.JLabel;
 import javax.swing.JMenu;
-import javax.swing.JOptionPane;
 import javax.swing.JPanel;
 import javax.swing.JScrollPane;
 import javax.swing.JTextArea;
 import javax.swing.JTextField;
 import javax.swing.JToolBar;
-import net.yura.domination.engine.RiskUIUtil;
 
 /**
  * @author Yura Mamyrin
  */
-
 public class BugsPanel extends JPanel implements ActionListener, SwingGUITab {
 
 	private JToolBar toolbar;
 	private JTextArea text;
 	private JTextField from;
+        private SwingGUIPanel gui;
 
-	public BugsPanel() {
-
+	public BugsPanel(SwingGUIPanel sgp) {
+                gui = sgp;
 		setName( "Report Bugs" );
-
 		setOpaque(false);
-
 		toolbar = new JToolBar();
-
 		toolbar.setRollover(true);
 		toolbar.setFloatable(false);
 
@@ -62,24 +56,16 @@ public class BugsPanel extends JPanel implements ActionListener, SwingGUITab {
 	}
 
 	public void actionPerformed(ActionEvent a) {
-
-		if (a.getActionCommand().equals("send")) {
-
-                    SwingGUIPanel.submitBug(this,text.getText(), from.getText(), "Suggestion",null);
-
-		}
-
+            if (a.getActionCommand().equals("send")) {
+                gui.submitBug(text.getText(), from.getText(), "Suggestion", null);
+            }
 	}
 
 	public JToolBar getToolBar() {
-
 		return toolbar;
-
 	}
 	public JMenu getMenu() {
-
 		return null;
-
 	}
 
 }
